--- a/templates/tree.html
+++ b/templates/tree.html
@@ -58,11 +58,7 @@
 
 
 <script>
-    var treeData = JSON.parse({
-    {
-        treeData | tojson | safe
-    }
-    })
+    var treeData = JSON.parse({{treeData | tojson | safe}})
 
 
 
