Update NavBar to add DOI

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -4,15 +4,14 @@
         <!-- BRAND -->
         <div class="navbar-header">
             <button aria-expanded="false" class="navbar-toggle collapsed" data-target="#alignment-example"
-                    data-toggle="collapse" type="button">
+                data-toggle="collapse" type="button">
                 <span class="sr-only">Toggle navigatsion</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
             <a href="https://www.unl.edu">
-                <img alt="Brand" class="navbar-brand"
-                     src="{{ url_for('static', filename='images/unl.svg') }}"></a>
+                <img alt="Brand" class="navbar-brand" src="{{ url_for('static', filename='images/unl.svg') }}"></a>
             <a class="navbar-brand" href="{{ url_for('index') }}">{{ config['title'] }}</a>
         </div>
 
@@ -23,7 +22,7 @@
             <ul class="nav navbar-nav">
                 <li class="dropdown">
                     <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href=""
-                       role="button">Class <span class="caret"></span></a>
+                        role="button">Class <span class="caret"></span></a>
                     <ul aria-labelledby="about-us" class="dropdown-menu">
                         <li><a href="{{ url_for('classes', class_id = 'ORs') }}">ORs</a></li>
                         <li><a href="{{ url_for('classes', class_id = 'FRs') }}">FRs</a></li>
@@ -52,13 +51,13 @@
                 </li>
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown" href=""
-                           role="button">Taxonomy <span class="caret"></span></a>
+                        <a aria-expanded="false" aria-haspopup="true" class="dropdown-toggle" data-toggle="dropdown"
+                            href="" role="button">Taxonomy <span class="caret"></span></a>
                         <ul aria-labelledby="about-us" class="dropdown-menu">
                             <li><a href="{{ url_for('taxonomy_family', family_id = 'UHGP') }}">Homologs from UHGP</a>
                             </li>
                             <li><a href="{{ url_for('taxonomy_family', family_id = 'UniProt') }}">Homologs from
-                                UniProt</a></li>
+                                    UniProt</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -71,7 +70,9 @@
                         <a class="nav-link" href="{{ url_for('about') }}">About</a>
                     </li>
                 </ul>
-
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="https://doi.org/10.1128/AEM.01851-21">Cite: 10.1128/AEM.01851-21</a></li>
+                </ul>
 
         </div>
 
@@ -87,6 +88,6 @@
 
     // Initialize popover component
     $(function () {
-        $("[data-toggle='popover']").popover({trigger: 'hover click'});
+        $("[data-toggle='popover']").popover({ trigger: 'hover click' });
     });
 </script>
