--- a/templates/500.html
+++ b/templates/500.html
@@ -9,7 +9,7 @@
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700,900" rel="stylesheet">
-    <link href="{{ url_for('static', filename='styles/404.css') }}" rel="stylesheet" type="text/css"/>
+    <link href="{{ url_for('static', filename='styles/404.css') }}" rel="stylesheet" type="text/css" />
     <meta content="noindex" name="robots">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -20,19 +20,22 @@
     <![endif]-->
 
 </head>
+
 <body>
-<div id="notfound">
-    <div class="notfound">
-        <div class="notfound-404">
-            <h1>500</h1>
+    <div id="notfound">
+        <div class="notfound">
+            <div class="notfound-404">
+                <h1>500</h1>
+            </div>
+            <h2>Oops! Sorry, it's me, not you!</h2>
+            <p>Internal Server Error. An unexpected error seems to have occurred. Why not try refreshing your page or
+                you
+                can contact us if the problem persists.</p>
+            <a href="#" onclick="history.back();">Go back</a>
+            <a href="{{ url_for('index') }}">Homepage</a>
+            <a href="https://www.unl.edu">UNL</a>
         </div>
-        <h2>Oops! Sorry, it's me, not you!</h2>
-        <p>Internal Server Error. An unexpected error seems to have occurred. Why not try refreshing your page or you
-            can contact us if the problem persists.</p>
-        <a href="#" onclick="history.back();">Go back</a>
-        <a href="{{ url_for('index') }}">Homepage</a>
-        <a href="https://www.unl.edu">UNL</a>
     </div>
-</div>
 </body>
+
 </html>
