--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,60 +1,59 @@
 <head>
-    <meta charset="utf-8">
-    <title>{{ title+config['title'] }}</title>
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport">
-    <meta content="{{ config['keywords'] }}" name="keywords">
-    <meta content="{{ description }}" name="description">
-    <link href="{{ url_for('static', filename='icon.svg') }}" rel="icon" sype="image/svg+xml">
-    <link href="{{ url_for('static', filename='favicon.ico') }}" rel="shortcut icon" type="image/x-icon">
+        <meta charset="utf-8">
+        <title>{{ title+config['title'] }}</title>
+        <meta content="IE=edge" http-equiv="X-UA-Compatible">
+        <meta content="width=device-width, initial-scale=1, viewport-fit=cover" name="viewport">
+        <meta content="{{ config['keywords'] }}" name="keywords">
+        <meta content="{{ description }}" name="description">
+        <link href="{{ url_for('static', filename='icon.svg') }}" rel="icon" sype="image/svg+xml">
+        <link href="{{ url_for('static', filename='favicon.ico') }}" rel="shortcut icon" type="image/x-icon">
 
-    <script crossorigin="anonymous"
-            integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-            src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script crossorigin="anonymous"
+                integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+                src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <script crossorigin="anonymous"
-            integrity="sha512-oBTprMeNEKCnqfuqKd6sbvFzmFQtlXS3e0C/RGFV0hD6QzhHV+ODfaQbAlmY6/q0ubbwlAM/nCJjkrgA3waLzg=="
-            src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link crossorigin="anonymous"
-          href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css"
-          integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw=="
-          rel="stylesheet"/>
+        <script crossorigin="anonymous"
+                integrity="sha512-oBTprMeNEKCnqfuqKd6sbvFzmFQtlXS3e0C/RGFV0hD6QzhHV+ODfaQbAlmY6/q0ubbwlAM/nCJjkrgA3waLzg=="
+                src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link crossorigin="anonymous"
+                href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css"
+                integrity="sha512-Dop/vW3iOtayerlYAqCgkVr2aTr2ErwwTYOvRFUpzl2VhCMJyjQF0Q9TjUXIo6JhuM/3i0vVEt2e/7QQmnHQqw=="
+                rel="stylesheet" />
 
-    <link href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sl-1.3.3/datatables.min.css" rel="stylesheet"
-          type="text/css"/>
-    <script src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sl-1.3.3/datatables.min.js"
-            type="text/javascript"></script>
+        <link href="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sl-1.3.3/datatables.min.css"
+                rel="stylesheet" type="text/css" />
+        <script src="https://cdn.datatables.net/v/bs/jszip-2.5.0/dt-1.11.3/b-2.0.1/b-html5-2.0.1/sl-1.3.3/datatables.min.js"
+                type="text/javascript"></script>
 
 
-    <script crossorigin="anonymous"
-            integrity="sha512-CBGCXtszkG5rYlQSTNUzk54/731Kz28WPk2uT1GCPCqgfVRJ2v514vzzf16HuGX9WVtE7JLqRuAERNAzFZ9Hpw=="
-            src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.2/cytoscape.min.js"></script>
-    <script crossorigin="anonymous"
-            integrity="sha512-oJp0DdQuQQrRsKVly+Ww6fAN1GwJN7d1bi8UubpEbzDUh84WrJ2CFPBnT4LqBCcfqTcHR5OGXFFhaPe3g1/bzQ=="
-            src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+        <script crossorigin="anonymous"
+                integrity="sha512-CBGCXtszkG5rYlQSTNUzk54/731Kz28WPk2uT1GCPCqgfVRJ2v514vzzf16HuGX9WVtE7JLqRuAERNAzFZ9Hpw=="
+                src="https://cdnjs.cloudflare.com/ajax/libs/cytoscape/3.18.2/cytoscape.min.js"></script>
+        <script crossorigin="anonymous"
+                integrity="sha512-oJp0DdQuQQrRsKVly+Ww6fAN1GwJN7d1bi8UubpEbzDUh84WrJ2CFPBnT4LqBCcfqTcHR5OGXFFhaPe3g1/bzQ=="
+                src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
-    <script crossorigin="anonymous"
-            integrity="sha512-mBSqtiBr4vcvTb6BCuIAgVx4uF3EVlVvJ2j+Z9USL0VwgL9liZ638rTANn5m1br7iupcjjg/LIl5cCYcNae7Yg=="
-            referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.0.18/sweetalert2.min.js"></script>
-    <link crossorigin="anonymous" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.0.18/sweetalert2.min.css"
-          integrity="sha512-riZwnB8ebhwOVAUlYoILfran/fH0deyunXyJZ+yJGDyU0Y8gsDGtPHn1eh276aNADKgFERecHecJgkzcE9J3Lg=="
-          referrerpolicy="no-referrer" rel="stylesheet"/>
+        <script crossorigin="anonymous"
+                integrity="sha512-mBSqtiBr4vcvTb6BCuIAgVx4uF3EVlVvJ2j+Z9USL0VwgL9liZ638rTANn5m1br7iupcjjg/LIl5cCYcNae7Yg=="
+                referrerpolicy="no-referrer"
+                src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.0.18/sweetalert2.min.js"></script>
+        <link crossorigin="anonymous"
+                href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.0.18/sweetalert2.min.css"
+                integrity="sha512-riZwnB8ebhwOVAUlYoILfran/fH0deyunXyJZ+yJGDyU0Y8gsDGtPHn1eh276aNADKgFERecHecJgkzcE9J3Lg=="
+                referrerpolicy="no-referrer" rel="stylesheet" />
 
-    <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='styles/custom.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+        <link href="{{ url_for('static', filename='styles/loading.css') }}" rel="stylesheet">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHXD5LTGNE"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-
-        gtag('js', new Date());
-
-        gtag('config', 'G-KHXD5LTGNE');
-    </script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-KHXD5LTGNE"></script>
+        <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag() {
+                        dataLayer.push(arguments);
+                }
+                gtag('js', new Date());
+                gtag('config', 'G-KHXD5LTGNE');
+        </script>
 </head>
