--- a/templates/characterized.html
+++ b/templates/characterized.html
@@ -53,130 +53,130 @@
 <div>
     <table class="table display" id="data-table">
         <thead>
-        <tr>
-            <th style="white-space: nowrap">Number</th>
-            <th style="white-space: nowrap">Family</th>
-            <th style="white-space: nowrap">DOI</th>
-            <th style="white-space: nowrap">Protein Name</th>
-            <th style="white-space: nowrap">pfam</th>
-            <th style="white-space: nowrap">Gene Name</th>
-            <th style="white-space: nowrap">Uniprot</th>
-            <th style="white-space: nowrap">EC</th>
-            <th style="white-space: nowrap">Strain</th>
-            <th style="white-space: nowrap">Substrate</th>
-            <th style="white-space: nowrap">Product</th>
-            <th style="white-space: nowrap">PDB</th>
-            <th style="white-space: nowrap">Km(μM)</th>
-            <th style="white-space: nowrap">Vmax(μM/s)</th>
-            <th style="white-space: nowrap">Kcat(s<sup>-1</sup>)</th>
-            <th style="white-space: nowrap"><br></th>
-        </tr>
+            <tr>
+                <th style="white-space: nowrap">Number</th>
+                <th style="white-space: nowrap">Family</th>
+                <th style="white-space: nowrap">DOI</th>
+                <th style="white-space: nowrap">Protein Name</th>
+                <th style="white-space: nowrap">pfam</th>
+                <th style="white-space: nowrap">Gene Name</th>
+                <th style="white-space: nowrap">Uniprot</th>
+                <th style="white-space: nowrap">EC</th>
+                <th style="white-space: nowrap">Strain</th>
+                <th style="white-space: nowrap">Substrate</th>
+                <th style="white-space: nowrap">Product</th>
+                <th style="white-space: nowrap">PDB</th>
+                <th style="white-space: nowrap">Km(μM)</th>
+                <th style="white-space: nowrap">Vmax(μM/s)</th>
+                <th style="white-space: nowrap">Kcat(s<sup>-1</sup>)</th>
+                <th style="white-space: nowrap"><br></th>
+            </tr>
         </thead>
         <tbody>
-        {% for record in records %}
-        <tr>
-            <td>{{ record.number }}</td>
-            <td>
-                {% if "unclassified" in record.family %}
-                {{ record.family }}
-                {% elif "_" in record.family: %}
-                <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
+            {% for record in records %}
+            <tr>
+                <td>{{ record.number }}</td>
+                <td>
+                    {% if "unclassified" in record.family %}
+                    {{ record.family }}
+                    {% elif "_" in record.family: %}
+                    <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
+                    {% else %}
+                    <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
+                    {% endif %}
+                </td>
+                <td><a href="https://doi.org/{{ record.doi }}" rel="noopener noreferrer" target="_blank">{{ record.doi
+                        }}</a></td>
+                <td>{{ record.protein_name }}</td>
+                <td>
+                    {% for pfam in pfam_dic[record.number -1] %}
+                    {% if pfam[0] == "Not detected" %}
+                    {{ pfam[0] }}
+                    {% else %}
+                    <a href="{{ pfam[1] }}" rel="noopener noreferrer" target="_blank">{{ pfam[0] }}</a>
+                    {% endif %}
+                    {% endfor %}
+                </td>
+                <td>{{ record.gene_name }}</td>
+                <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}" rel="noopener noreferrer"
+                        target="_blank">{{ record.uniq_id }}</a></td>
+                {% if record.ec == '-1' %}
+                <td>{{ ' ' }}</td>
                 {% else %}
-                <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
-                {% endif %}
-            </td>
-            <td><a href="https://doi.org/{{ record.doi }}" rel="noopener noreferrer"
-                   target="_blank">{{ record.doi }}</a></td>
-            <td>{{ record.protein_name }}</td>
-            <td>
-                {% for pfam in pfam_dic[record.number -1] %}
-                {% if pfam[0] == "Not detected" %}
-                {{ pfam[0] }}
-                {% else %}
-                <a href="{{ pfam[1] }}" rel="noopener noreferrer" target="_blank">{{ pfam[0] }}</a>
-                {% endif %}
-                {% endfor %}
-            </td>
-            <td>{{ record.gene_name }}</td>
-            <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}" rel="noopener noreferrer"
-                   target="_blank">{{ record.uniq_id }}</a></td>
-            {% if record.ec == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            <td>
-                {% for element in ec[record.number] %}
-                <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}"
-                   rel="noopener noreferrer" target="_blank">{{ element }}</a>
-                {% endfor %}
-            </td>
+                <td>
+                    {% for element in ec[record.number] %}
+                    <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}" rel="noopener noreferrer"
+                        target="_blank">{{ element }}</a>
+                    {% endfor %}
+                </td>
 
-            {% endif %}
-            <td>
-                <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}"
-                   rel="noopener noreferrer" target="_blank">{{ record.strain }}</a>
-            </td>
-            <td>
-                {% for element in sub[record.number] %}
-                {% if element[2] == '' %}
-                {{ element[0] }}{{ element[1] }};
-                {% else %}
-                <a href="{{ element[2] }}" rel="noopener noreferrer"
-                   target="_blank">{{ element[0] }}</a>{{ element[1] }};
                 {% endif %}
-                {% endfor %}
-            </td>
-            <td> {% for element in product[record.number] %}
-                {% if ('A1' in element[0] or 'A2' in element[0] or 'A3' in element[0]) %}
-                {{ element[0] }};
-                {% elif (element[1] == '') %}
-                {{ element[0] }};
+                <td>
+                    <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}"
+                        rel="noopener noreferrer" target="_blank">{{ record.strain }}</a>
+                </td>
+                <td>
+                    {% for element in sub[record.number] %}
+                    {% if element[2] == '' %}
+                    {{ element[0] }}{{ element[1] }};
+                    {% else %}
+                    <a href="{{ element[2] }}" rel="noopener noreferrer" target="_blank">{{ element[0] }}</a>{{
+                    element[1] }};
+                    {% endif %}
+                    {% endfor %}
+                </td>
+                <td> {% for element in product[record.number] %}
+                    {% if ('A1' in element[0] or 'A2' in element[0] or 'A3' in element[0]) %}
+                    {{ element[0] }};
+                    {% elif (element[1] == '') %}
+                    {{ element[0] }};
+                    {% else %}
+                    <a href="{{ element[1] }}" rel="noopener noreferrer" target="_blank">{{ element[0] }};</a>
+                    {% endif %}
+                    {% endfor %}
+                </td>
+                {% if record.pdb == '-1' %}
+                <td>{{ ' ' }}</td>
                 {% else %}
-                <a href="{{ element[1] }}" rel="noopener noreferrer" target="_blank">{{ element[0] }};</a>
+                <td>
+                    {% for element in rows[record.number] %}
+                    <a href="https://www.rcsb.org/structure/{{ element[1] }}" rel="noopener noreferrer"
+                        target="_blank">{{ element[0] }}</a>
+                    {% endfor %}
+                </td>
                 {% endif %}
-                {% endfor %}
-            </td>
-            {% if record.pdb == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            <td>
-                {% for element in rows[record.number] %}
-                <a href="https://www.rcsb.org/structure/{{ element[1] }}" rel="noopener noreferrer"
-                   target="_blank">{{ element[0] }}</a>
-                {% endfor %}
-            </td>
-            {% endif %}
 
-            {% if record.km == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            {% if record.number == '39' %}
-            <td>4±0.9[Mn<sup>2+</sup>]</td>
-            {% else %}
-            <td>{{ record.km }}</td>
-            {% endif %}
-            {% endif %}
-            {% if record.vmax == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% elif record.number == '16' %}
-            <td>76 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
-            {% elif record.number == '15' %}
-            <td>1 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
-            {% else %}
-            <td>{{ record.vmax }}</td>
-            {% endif %}
-            {% if record.kcat == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            {% if record.number == '39' %}
-            <td>25±1[Mn<sup>2+</sup>]</td>
-            {% else %}
-            <td>{{ record.km }}</td>
-            {% endif %}
-            {% endif %}
-            <td>>{{ record.uniq_id }} {{ record.protein_name }} OS={{ record.strain }}&#10;{{ record.seq }}
-            </td>
-        </tr>
-        {% endfor %}
+                {% if record.km == '-1' %}
+                <td>{{ ' ' }}</td>
+                {% else %}
+                {% if record.number == '39' %}
+                <td>4±0.9[Mn<sup>2+</sup>]</td>
+                {% else %}
+                <td>{{ record.km }}</td>
+                {% endif %}
+                {% endif %}
+                {% if record.vmax == '-1' %}
+                <td>{{ ' ' }}</td>
+                {% elif record.number == '16' %}
+                <td>76 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
+                {% elif record.number == '15' %}
+                <td>1 (μmol min<sup>-1</sup> mg<sup>-1</sup>)</td>
+                {% else %}
+                <td>{{ record.vmax }}</td>
+                {% endif %}
+                {% if record.kcat == '-1' %}
+                <td>{{ ' ' }}</td>
+                {% else %}
+                {% if record.number == '39' %}
+                <td>25±1[Mn<sup>2+</sup>]</td>
+                {% else %}
+                <td>{{ record.km }}</td>
+                {% endif %}
+                {% endif %}
+                <td>>{{ record.uniq_id }} {{ record.protein_name }} OS={{ record.strain }}&#10;{{ record.seq }}
+                </td>
+            </tr>
+            {% endfor %}
         </tbody>
     </table>
 </div>
