--- a/templates/classes.html
+++ b/templates/classes.html
@@ -15,8 +15,7 @@
     <ul class="breadcrumb" style="font-size: medium">
         {% for i in range(amount) %}
         {% set family_id = class_id[:-1] + (i + 1)|string() %}
-        <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('family', family_id = family_id) }}">{{ family_id }}</a> <span class="divider"></span>
         </li>
         {% endfor %}
 
