--- a/templates/index.html
+++ b/templates/index.html
@@ -15,20 +15,15 @@
         Class List
     </h2>
     <ul class="breadcrumb" style="font-size: medium">
-        <li><a href="{{ url_for('classes', class_id = 'ORs') }}">ORs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'ORs') }}">ORs</a> <span class="divider"></span>
         </li>
-        <li><a href="{{ url_for('classes', class_id = 'FRs') }}">FRs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'FRs') }}">FRs</a> <span class="divider"></span>
         </li>
-        <li><a href="{{ url_for('classes', class_id = 'HRs') }}">HRs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'HRs') }}">HRs</a> <span class="divider"></span>
         </li>
-        <li><a href="{{ url_for('classes', class_id = 'NCRs') }}">NCRs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'NCRs') }}">NCRs</a> <span class="divider"></span>
         </li>
-        <li><a href="{{ url_for('classes', class_id = 'IRs') }}">IRs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'IRs') }}">IRs</a> <span class="divider"></span>
         </li>
         <!--<li><a href="{{ url_for('classes', class_id = 'SRs') }}">SRs</a> <span-->
         <!--        class="divider"></span>-->
@@ -36,8 +31,7 @@
         <!--<li><a href="{{ url_for('classes', class_id = 'TRs') }}">TRs</a> <span-->
         <!--        class="divider"></span>-->
         <!--</li>-->
-        <li><a href="{{ url_for('classes', class_id = 'UCs') }}">UCs</a> <span
-                class="divider"></span>
+        <li><a href="{{ url_for('classes', class_id = 'UCs') }}">UCs</a> <span class="divider"></span>
         </li>
     </ul>
 </div>
