--- a/templates/network.html
+++ b/templates/network.html
@@ -42,8 +42,7 @@
     </div>
     {% for i in finalfile %}
     <div class="tab-pane fade" id="{{ i }}">
-        <img alt="{{ i }}" class="myimg"
-             src="{{ url_for('static', filename='images/SSN_figures/') }}{{ i }}.jpg">
+        <img alt="{{ i }}" class="myimg" src="{{ url_for('static', filename='images/SSN_figures/') }}{{ i }}.jpg">
     </div>
     {% endfor %}
 </div>
