--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -3,9 +3,7 @@
 {% block title %}TrEMBL Data{% endblock %}
 {% block content %}
 <style>
-    scrollX:
-
-    "100%"
+    scrollX: "100%"
 </style>
 <div class="row">
     <div class="page-header">
@@ -127,70 +125,70 @@
 <div>
     <table class="table display" id="data-table">
         <thead>
-        <tr>
-            <th style="white-space: nowrap">Protein Name</th>
-            <th style="white-space: nowrap">Strain</th>
-            <th style="white-space: nowrap">Uniprot</th>
-            <th style="white-space: nowrap">PDB</th>
-            <th style="white-space: nowrap">Family</th>
-            <th style="white-space: nowrap">EC</th>
-            <th style="white-space: nowrap">Sequence</th>
-            <th style="white-space: nowrap"><br></th>
-            <th style="white-space: nowrap">type</th>
-            <th style="white-space: nowrap">lineage</th>
-        </tr>
+            <tr>
+                <th style="white-space: nowrap">Protein Name</th>
+                <th style="white-space: nowrap">Strain</th>
+                <th style="white-space: nowrap">Uniprot</th>
+                <th style="white-space: nowrap">PDB</th>
+                <th style="white-space: nowrap">Family</th>
+                <th style="white-space: nowrap">EC</th>
+                <th style="white-space: nowrap">Sequence</th>
+                <th style="white-space: nowrap"><br></th>
+                <th style="white-space: nowrap">type</th>
+                <th style="white-space: nowrap">lineage</th>
+            </tr>
         </thead>
         <tbody>
-        {% for record in records %}
-        <tr>
-            <td>{{ record.protein_enzyme }}</td>
-            <td>
-                <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{
-                    record.strain }}</a>
-            </td>
-            <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
+            {% for record in records %}
+            <tr>
+                <td>{{ record.protein_enzyme }}</td>
+                <td>
+                    <a href="https://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id={{ record.web_id }}">{{
+                        record.strain }}</a>
+                </td>
+                <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
 
-            {% if record.pdb == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            <td>
-                {% for element in rows[record.number] %}
-                <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }}</a>
-                {% endfor %}
-            </td>
-            {% endif %}
-
-            <td>
-                {% if "unclassified" in record.family: %}
-                {{ record.family }}
-                {% elif "_" in record.family: %}
-                <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
+                {% if record.pdb == '-1' %}
+                <td>{{ ' ' }}</td>
                 {% else %}
-                <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
+                <td>
+                    {% for element in rows[record.number] %}
+                    <a href="https://www.rcsb.org/structure/{{ element[1] }}">{{ element[0] }}</a>
+                    {% endfor %}
+                </td>
                 {% endif %}
-            </td>
-            {% if record.ec == '-1' %}
-            <td>{{ ' ' }}</td>
-            {% else %}
-            <td>
-                {% for element in ec[record.number] %}
-                <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
-                {% endfor %}
-            </td>
-            {% endif %}
-            <td>
-                <a href="{{ url_for('detail',mode='trembl', unid = record.uniq_id) }}" target="_blank">view</a>
-            </td>
-            <td>
-                >{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}&#10;{{ record.seq }}
-            </td>
 
-            <td>
-                <p>{{ record.type }}</p>
-            </td>
-            <td>{{ record.lineage }}</td>
-        </tr>
-        {% endfor %}
+                <td>
+                    {% if "unclassified" in record.family: %}
+                    {{ record.family }}
+                    {% elif "_" in record.family: %}
+                    <a href="{{ url_for('subfamily', family_id = record.family) }}">{{ record.family }}</a>
+                    {% else %}
+                    <a href="{{ url_for('family', family_id = record.family) }}">{{ record.family }}</a>
+                    {% endif %}
+                </td>
+                {% if record.ec == '-1' %}
+                <td>{{ ' ' }}</td>
+                {% else %}
+                <td>
+                    {% for element in ec[record.number] %}
+                    <a href="https://www.brenda-enzymes.org/enzyme.php?ecno={{ element }}">{{ element }}</a>
+                    {% endfor %}
+                </td>
+                {% endif %}
+                <td>
+                    <a href="{{ url_for('detail',mode='trembl', unid = record.uniq_id) }}" target="_blank">view</a>
+                </td>
+                <td>
+                    >{{ record.uniq_id }} {{ record.protein_enzyme }} OS={{ record.strain }}&#10;{{ record.seq }}
+                </td>
+
+                <td>
+                    <p>{{ record.type }}</p>
+                </td>
+                <td>{{ record.lineage }}</td>
+            </tr>
+            {% endfor %}
 
         </tbody>
 
