--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -10,7 +10,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://www.unl.edu">
+            <a href="https://bcb.unl.edu/">
                 <img alt="Brand" class="navbar-brand" src="{{ url_for('static', filename='images/unl.svg') }}"></a>
             <a class="navbar-brand" href="{{ url_for('index') }}">{{ config['title'] }}</a>
         </div>
@@ -70,9 +70,10 @@
                         <a class="nav-link" href="{{ url_for('about') }}">About</a>
                     </li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="https://doi.org/10.1128/AEM.01851-21">Cite: 10.1128/AEM.01851-21</a></li>
-                </ul>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://doi.org/10.1128/AEM.01851-21" target="_blank">Cite: 10.1128/AEM.01851-21</a></li>
+            </ul>
 
         </div>
 
